--- a/Batch1Work/Views/Shared/_Layout.cshtml
+++ b/Batch1Work/Views/Shared/_Layout.cshtml
@@ -26,6 +26,12 @@
 	<script src="@Url.Content("~/Scripts/kendo/2013.2.716/kendo.aspnetmvc.min.js")"></script>
 	<script src="@Url.Content("~/Scripts/kendo.modernizr.custom.js")"></script>
 
+    <style type="text/css">
+        #filteredFieldAlertContainer {
+            margin-bottom:0;
+        }
+    </style>
+
 </head>
 <body>
 
